CHANGE HISTORY
--------------------------------

1.8.0   04/17/10

Added CWOP support.

Storage of LOOP and archive data into the SQL databases is now just another
service, StdArchive.

Average console battery voltage is now calculated from LOOP data, and saved to
the archive as 'consBatteryVoltage'.

Transmitter battery status is now ORd together from LOOP data, and saved to the
archive as 'txBatteryStatus'.

Added stack tracebacks for unrecoverable exceptions.

Added a wrapper to the serial port in the VantagePro code. When used in a Python
"with" statement, it automatically releases the serial port if an exception
happens, allowing a more orderly shutdown.

Corrected error in units. getTargetType() that showed itself with when the
console memory was freshly cleared, then tried to graph something immediately.


1.7.0   04/15/10

Big update.

Reports now use skins for their "look or feel."  Options specific to the
presentation layer have been moved out of the weewx configuration file
'weewx.conf' to a skin configuration file, 'skin.conf'. Other options have
remained behind.

Because the configuration file weewx.conf was split, the installation script
setup.py will NOT merge your old configuration file into the new one. You will
have to reedit weewx.conf to put in your customizations.

FTP is treated as just another report, albeit with an unusual generator. You can
have multiple FTP sessions, each to a different server, or uploading to or from
a different area.

Rewrote the FTP upload package so that it allows more than one FTP session to be
active in the same local directory. This version also does fewer hits on the
server, so it is significantly faster.

The configuration files weewx.conf and skin.conf now expect UTF-8 characters
throughout.

The encoding for reports generated from templates can be chosen. By default, the
day, week, month, and year HTML files are encoded using HTML entities; the NOAA